package NYT.NBus.NProto;

option go_package = "go.ytsaurus.tech/yt/go/proto/core/bus";

import "yt_proto/yt/core/misc/proto/guid.proto";

message THandshake
{
    required NYT.NProto.TGuid connection_id = 1;

    // Only passed from client to server.
    optional int32 multiplexing_band = 2; // EMultiplexingBand

    optional int32 encryption_mode = 3; // EEncryptionMode

    optional int32 verification_mode = 4; // EVerificationMode

    // Client verify server identity against known endpoint identity.
    optional string identity = 5;
}
